// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenize function block call 1`] = `
[
  {
    "source": {
      "endCol": 3,
      "endLine": 1,
      "startCol": 0,
      "startLine": 1,
    },
    "value": "add",
  },
  {
    "source": {
      "endCol": 4,
      "endLine": 1,
      "startCol": 3,
      "startLine": 1,
    },
    "value": "(",
  },
  {
    "source": {
      "endCol": 5,
      "endLine": 1,
      "startCol": 4,
      "startLine": 1,
    },
    "value": "a",
  },
  {
    "source": {
      "endCol": 6,
      "endLine": 1,
      "startCol": 5,
      "startLine": 1,
    },
    "value": ",",
  },
  {
    "source": {
      "endCol": 8,
      "endLine": 1,
      "startCol": 7,
      "startLine": 1,
    },
    "value": "b",
  },
  {
    "source": {
      "endCol": 9,
      "endLine": 1,
      "startCol": 8,
      "startLine": 1,
    },
    "value": ",",
  },
  {
    "source": {
      "endCol": 11,
      "endLine": 1,
      "startCol": 10,
      "startLine": 1,
    },
    "value": "c",
  },
  {
    "source": {
      "endCol": 12,
      "endLine": 1,
      "startCol": 11,
      "startLine": 1,
    },
    "value": ")",
  },
  {
    "source": {
      "endCol": 14,
      "endLine": 1,
      "startCol": 13,
      "startLine": 1,
    },
    "value": "{",
  },
  {
    "source": {
      "endCol": 23,
      "endLine": 2,
      "startCol": 22,
      "startLine": 2,
    },
    "value": "b",
  },
  {
    "source": {
      "endCol": 24,
      "endLine": 2,
      "startCol": 23,
      "startLine": 2,
    },
    "value": "(",
  },
  {
    "source": {
      "endCol": 25,
      "endLine": 2,
      "startCol": 24,
      "startLine": 2,
    },
    "value": ")",
  },
  {
    "source": {
      "endCol": 20,
      "endLine": 3,
      "startCol": 19,
      "startLine": 3,
    },
    "value": "}",
  },
]
`;

exports[`tokenize function call 1`] = `
[
  {
    "source": {
      "endCol": 3,
      "endLine": 1,
      "startCol": 0,
      "startLine": 1,
    },
    "value": "add",
  },
  {
    "source": {
      "endCol": 4,
      "endLine": 1,
      "startCol": 3,
      "startLine": 1,
    },
    "value": "(",
  },
  {
    "source": {
      "endCol": 5,
      "endLine": 1,
      "startCol": 4,
      "startLine": 1,
    },
    "value": "a",
  },
  {
    "source": {
      "endCol": 6,
      "endLine": 1,
      "startCol": 5,
      "startLine": 1,
    },
    "value": ",",
  },
  {
    "source": {
      "endCol": 8,
      "endLine": 1,
      "startCol": 7,
      "startLine": 1,
    },
    "value": "b",
  },
  {
    "source": {
      "endCol": 9,
      "endLine": 1,
      "startCol": 8,
      "startLine": 1,
    },
    "value": ",",
  },
  {
    "source": {
      "endCol": 11,
      "endLine": 1,
      "startCol": 10,
      "startLine": 1,
    },
    "value": "c",
  },
  {
    "source": {
      "endCol": 12,
      "endLine": 1,
      "startCol": 11,
      "startLine": 1,
    },
    "value": ")",
  },
]
`;

exports[`tokenize removes whitespace 1`] = `
[
  {
    "source": {
      "endCol": 3,
      "endLine": 1,
      "startCol": 0,
      "startLine": 1,
    },
    "value": "int",
  },
  {
    "source": {
      "endCol": 5,
      "endLine": 1,
      "startCol": 4,
      "startLine": 1,
    },
    "value": "i",
  },
  {
    "source": {
      "endCol": 13,
      "endLine": 1,
      "startCol": 12,
      "startLine": 1,
    },
    "value": "=",
  },
  {
    "source": {
      "endCol": 2,
      "endLine": 2,
      "startCol": 1,
      "startLine": 2,
    },
    "value": "0",
  },
]
`;

exports[`tokenize tokenize single variable 1`] = `
[
  {
    "source": {
      "endCol": 3,
      "endLine": 1,
      "startCol": 0,
      "startLine": 1,
    },
    "value": "int",
  },
  {
    "source": {
      "endCol": 5,
      "endLine": 1,
      "startCol": 4,
      "startLine": 1,
    },
    "value": "i",
  },
  {
    "source": {
      "endCol": 6,
      "endLine": 1,
      "startCol": 5,
      "startLine": 1,
    },
    "value": "=",
  },
  {
    "source": {
      "endCol": 7,
      "endLine": 1,
      "startCol": 6,
      "startLine": 1,
    },
    "value": "0",
  },
]
`;

exports[`tokenize work with a single token 1`] = `
[
  {
    "source": {
      "endCol": 3,
      "endLine": 1,
      "startCol": 0,
      "startLine": 1,
    },
    "value": "int",
  },
]
`;

exports[`tokenize work with long list of tokens 1`] = `
[
  {
    "source": {
      "endCol": 3,
      "endLine": 1,
      "startCol": 0,
      "startLine": 1,
    },
    "value": "add",
  },
  {
    "source": {
      "endCol": 4,
      "endLine": 1,
      "startCol": 3,
      "startLine": 1,
    },
    "value": "(",
  },
  {
    "source": {
      "endCol": 5,
      "endLine": 1,
      "startCol": 4,
      "startLine": 1,
    },
    "value": "a",
  },
  {
    "source": {
      "endCol": 6,
      "endLine": 1,
      "startCol": 5,
      "startLine": 1,
    },
    "value": ",",
  },
  {
    "source": {
      "endCol": 8,
      "endLine": 1,
      "startCol": 7,
      "startLine": 1,
    },
    "value": "b",
  },
  {
    "source": {
      "endCol": 9,
      "endLine": 1,
      "startCol": 8,
      "startLine": 1,
    },
    "value": ",",
  },
  {
    "source": {
      "endCol": 11,
      "endLine": 1,
      "startCol": 10,
      "startLine": 1,
    },
    "value": "c",
  },
  {
    "source": {
      "endCol": 12,
      "endLine": 1,
      "startCol": 11,
      "startLine": 1,
    },
    "value": ")",
  },
  {
    "source": {
      "endCol": 14,
      "endLine": 1,
      "startCol": 13,
      "startLine": 1,
    },
    "value": "{",
  },
  {
    "source": {
      "endCol": 23,
      "endLine": 2,
      "startCol": 22,
      "startLine": 2,
    },
    "value": "b",
  },
  {
    "source": {
      "endCol": 24,
      "endLine": 2,
      "startCol": 23,
      "startLine": 2,
    },
    "value": "(",
  },
  {
    "source": {
      "endCol": 25,
      "endLine": 2,
      "startCol": 24,
      "startLine": 2,
    },
    "value": ")",
  },
  {
    "source": {
      "endCol": 23,
      "endLine": 3,
      "startCol": 22,
      "startLine": 3,
    },
    "value": "d",
  },
  {
    "source": {
      "endCol": 24,
      "endLine": 3,
      "startCol": 23,
      "startLine": 3,
    },
    "value": "(",
  },
  {
    "source": {
      "endCol": 25,
      "endLine": 3,
      "startCol": 24,
      "startLine": 3,
    },
    "value": ")",
  },
  {
    "source": {
      "endCol": 27,
      "endLine": 4,
      "startCol": 22,
      "startLine": 4,
    },
    "value": "while",
  },
  {
    "source": {
      "endCol": 28,
      "endLine": 4,
      "startCol": 27,
      "startLine": 4,
    },
    "value": "(",
  },
  {
    "source": {
      "endCol": 29,
      "endLine": 4,
      "startCol": 28,
      "startLine": 4,
    },
    "value": "a",
  },
  {
    "source": {
      "endCol": 30,
      "endLine": 4,
      "startCol": 29,
      "startLine": 4,
    },
    "value": ",",
  },
  {
    "source": {
      "endCol": 31,
      "endLine": 4,
      "startCol": 30,
      "startLine": 4,
    },
    "value": "v",
  },
  {
    "source": {
      "endCol": 32,
      "endLine": 4,
      "startCol": 31,
      "startLine": 4,
    },
    "value": ",",
  },
  {
    "source": {
      "endCol": 33,
      "endLine": 4,
      "startCol": 32,
      "startLine": 4,
    },
    "value": "b",
  },
  {
    "source": {
      "endCol": 34,
      "endLine": 4,
      "startCol": 33,
      "startLine": 4,
    },
    "value": ")",
  },
  {
    "source": {
      "endCol": 36,
      "endLine": 4,
      "startCol": 35,
      "startLine": 4,
    },
    "value": "{",
  },
  {
    "source": {
      "endCol": 29,
      "endLine": 5,
      "startCol": 24,
      "startLine": 5,
    },
    "value": "while",
  },
  {
    "source": {
      "endCol": 30,
      "endLine": 5,
      "startCol": 29,
      "startLine": 5,
    },
    "value": "(",
  },
  {
    "source": {
      "endCol": 31,
      "endLine": 5,
      "startCol": 30,
      "startLine": 5,
    },
    "value": "a",
  },
  {
    "source": {
      "endCol": 32,
      "endLine": 5,
      "startCol": 31,
      "startLine": 5,
    },
    "value": ",",
  },
  {
    "source": {
      "endCol": 33,
      "endLine": 5,
      "startCol": 32,
      "startLine": 5,
    },
    "value": "v",
  },
  {
    "source": {
      "endCol": 34,
      "endLine": 5,
      "startCol": 33,
      "startLine": 5,
    },
    "value": ",",
  },
  {
    "source": {
      "endCol": 35,
      "endLine": 5,
      "startCol": 34,
      "startLine": 5,
    },
    "value": "c",
  },
  {
    "source": {
      "endCol": 36,
      "endLine": 5,
      "startCol": 35,
      "startLine": 5,
    },
    "value": ")",
  },
  {
    "source": {
      "endCol": 38,
      "endLine": 5,
      "startCol": 37,
      "startLine": 5,
    },
    "value": "{",
  },
  {
    "source": {
      "endCol": 31,
      "endLine": 6,
      "startCol": 26,
      "startLine": 6,
    },
    "value": "while",
  },
  {
    "source": {
      "endCol": 32,
      "endLine": 6,
      "startCol": 31,
      "startLine": 6,
    },
    "value": "(",
  },
  {
    "source": {
      "endCol": 33,
      "endLine": 6,
      "startCol": 32,
      "startLine": 6,
    },
    "value": "a",
  },
  {
    "source": {
      "endCol": 34,
      "endLine": 6,
      "startCol": 33,
      "startLine": 6,
    },
    "value": ",",
  },
  {
    "source": {
      "endCol": 35,
      "endLine": 6,
      "startCol": 34,
      "startLine": 6,
    },
    "value": "v",
  },
  {
    "source": {
      "endCol": 36,
      "endLine": 6,
      "startCol": 35,
      "startLine": 6,
    },
    "value": ",",
  },
  {
    "source": {
      "endCol": 37,
      "endLine": 6,
      "startCol": 36,
      "startLine": 6,
    },
    "value": "c",
  },
  {
    "source": {
      "endCol": 38,
      "endLine": 6,
      "startCol": 37,
      "startLine": 6,
    },
    "value": ")",
  },
  {
    "source": {
      "endCol": 40,
      "endLine": 6,
      "startCol": 39,
      "startLine": 6,
    },
    "value": "{",
  },
  {
    "source": {
      "endCol": 33,
      "endLine": 7,
      "startCol": 28,
      "startLine": 7,
    },
    "value": "while",
  },
  {
    "source": {
      "endCol": 34,
      "endLine": 7,
      "startCol": 33,
      "startLine": 7,
    },
    "value": "(",
  },
  {
    "source": {
      "endCol": 35,
      "endLine": 7,
      "startCol": 34,
      "startLine": 7,
    },
    "value": "a",
  },
  {
    "source": {
      "endCol": 36,
      "endLine": 7,
      "startCol": 35,
      "startLine": 7,
    },
    "value": ",",
  },
  {
    "source": {
      "endCol": 37,
      "endLine": 7,
      "startCol": 36,
      "startLine": 7,
    },
    "value": "v",
  },
  {
    "source": {
      "endCol": 38,
      "endLine": 7,
      "startCol": 37,
      "startLine": 7,
    },
    "value": ",",
  },
  {
    "source": {
      "endCol": 39,
      "endLine": 7,
      "startCol": 38,
      "startLine": 7,
    },
    "value": "c",
  },
  {
    "source": {
      "endCol": 40,
      "endLine": 7,
      "startCol": 39,
      "startLine": 7,
    },
    "value": ")",
  },
  {
    "source": {
      "endCol": 42,
      "endLine": 7,
      "startCol": 41,
      "startLine": 7,
    },
    "value": "{",
  },
  {
    "source": {
      "endCol": 34,
      "endLine": 8,
      "startCol": 30,
      "startLine": 8,
    },
    "value": "hans",
  },
  {
    "source": {
      "endCol": 36,
      "endLine": 8,
      "startCol": 35,
      "startLine": 8,
    },
    "value": "=",
  },
  {
    "source": {
      "endCol": 38,
      "endLine": 8,
      "startCol": 37,
      "startLine": 8,
    },
    "value": "a",
  },
  {
    "source": {
      "endCol": 31,
      "endLine": 9,
      "startCol": 30,
      "startLine": 9,
    },
    "value": "b",
  },
  {
    "source": {
      "endCol": 32,
      "endLine": 9,
      "startCol": 31,
      "startLine": 9,
    },
    "value": "=",
  },
  {
    "source": {
      "endCol": 34,
      "endLine": 9,
      "startCol": 33,
      "startLine": 9,
    },
    "value": "1",
  },
  {
    "source": {
      "endCol": 29,
      "endLine": 10,
      "startCol": 28,
      "startLine": 10,
    },
    "value": "}",
  },
  {
    "source": {
      "endCol": 27,
      "endLine": 11,
      "startCol": 26,
      "startLine": 11,
    },
    "value": "}",
  },
  {
    "source": {
      "endCol": 25,
      "endLine": 12,
      "startCol": 24,
      "startLine": 12,
    },
    "value": "}",
  },
  {
    "source": {
      "endCol": 23,
      "endLine": 13,
      "startCol": 22,
      "startLine": 13,
    },
    "value": "}",
  },
  {
    "source": {
      "endCol": 20,
      "endLine": 14,
      "startCol": 19,
      "startLine": 14,
    },
    "value": "}",
  },
]
`;
